# oxcraft

./: Cargo.toml  JOEL.org  README.org  rust-toolchain.toml  rustc-ice-2023-09-04T17:06:21.399414253Z-468960.txt  rustc-ice-2023-09-04T17:08:03.311904909Z-474571.txt  yeet.txt
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  lib.rs  main.rs
crates/oxcr_ecs/crates/apecs/: Cargo.toml
crates/oxcr_ecs/crates/apecs-derive-canfetch/src/: lib.rs
crates/oxcr_ecs/crates/apecs-derive/src/: lib.rs
crates/oxcr_ecs/crates/apecs/src/: lib.rs  plugin.rs  schedule.rs  world.rs
crates/oxcr_net/: Cargo.toml
crates/oxcr_net/src/: error.rs  executor.rs  lib.rs  model.rs  nbt.rs  nsfr.rs  ser.rs
crates/oxcr_net/src/model/: chat.rs  packets.rs  player.rs  varint.rs
crates/oxcr_net/src/model/packets/: handshake.rs  login.rs  play.rs  status.rs
crates/oxcr_server/: Cargo.toml
crates/oxcr_server/src/: main.rs
ddmagic/: Cargo.toml  README.org
ddmagic/src/: main.rs
protocol/: Cargo.toml
protocol/src/: error.rs  executor.rs  lib.rs  logging.rs  model.rs  nbt.rs  nsfr.rs  ser.rs
protocol/src/model/: chat.rs  item.rs  packets.rs  registry.rs  varint.rs
protocol/src/model/packets/: handshake.rs  login.rs  login_play_registry_codec_120.json  play.rs  status.rs
protocol/src/nsfr/: numbers.rs
protocol/src/ser/: error.rs  types.rs
proxy/: Cargo.toml
proxy/src/: main.rs
server/: Cargo.toml
server/src/: cli.rs  error.rs  main.rs  model.rs
server/src/model/: registry.rs
