[workspace]
members = [
        "crates/oxcr_net",
        "crates/oxcr_server",
]
resolver = "2"
edition = "2021"

[workspace.dependencies]
oxcr_net.path = "crates/oxcr_net"
tokio = { version = "1", features = [ "macros", "full", "rt", "sync" ] }
derive_more.version = "0.99.17"
tracing.version = "0"
thiserror.version = "1"
bytes = { version = "1", features = [ "serde" ] }
bevy = { version = "0.11.2", features = ["multi-threaded"], default-features = false }
