[workspace]
members = [
        "protocol",
        "server",
        "cli",
        "proxy",
        "ddmagic"
]
default-members = [ "protocol", "server" ]
resolver = "2"

[workspace.dependencies]
oxcr_protocol.path = "protocol"
oxcr_cli.path = "cli"
tokio = { version = "1", features = [ "macros", "full", "rt", "sync" ] }
derive_more.version = "0.99.17"
tracing.version = "0"
thiserror.version = "1"
bytes = { version = "1", features = [ "serde" ] }
bevy = { version = "0.11.2", features = ["multi-threaded"], default-features = false }
rayon = "1"
itertools = "0"
flate2 = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], default-features = false }
tokio-util = { version = "0", features = [ "full" ] }
