[package]
name = "oxcr_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
tokio.workspace = true
derive_more = "0.99.17"
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true

chashmap = "2.2.2"
aott = { git = "https://github.com/Implodent/AOTT.git", features = ["builtin-bytes", "builtin-text", "nightly", "tracing"] }
flume = { version = "0.11.0", features = ["async"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
uuid = { version = "1.4.1", features = ["v3"] }
bitflags = "2.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
indexmap = { version = "2.0.0", features = ["serde"] }

flate2.workspace = true
tracing-subscriber.workspace = true
nu-ansi-term = "0.49.0"

itertools.workspace = true
