[package]
name = "oxcr_net"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
tokio.workspace = true
bincode.workspace = true
derive_more.workspace = true
chashmap = "2.2.2"
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
aott = { git = "https://github.com/Implodent/AOTT.git", features = ["builtin-bytes"] }
flume = { version = "0.11.0", features = ["async"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_derive = "1.0.188"
